# portfolio-analyser

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml  run.py  test_mcp.py
api/: main.py  routes.py  schemas.py
frontend/: app.py  styles.py
frontend/components/: chat.py  dashboard.py  sidebar.py
scripts/: run_cli.py
src/portfolio_analyzer/: __init__.py  graph.py  state.py
src/portfolio_analyzer/data/: gold_data.py  gold_historical.csv  market_data.py  portfolio_parser.py  tapetide_client.py
src/portfolio_analyzer/metrics/: __init__.py  benchmark.py  correlation.py  drawdown.py  returns.py  risk.py  sector.py  var.py
src/portfolio_analyzer/models/: dashboard.py  intent.py
src/portfolio_analyzer/nodes/: classify_intent.py  emit_dashboard.py  execute_analysis.py  fetch_data.py  generate_response.py  parse_portfolio.py  suggest_followups.py
src/portfolio_analyzer/prompts/: templates.py
tests/: test_metrics.py  test_parser.py
tests/fixtures/: sample_portfolio.csv
