[project]
name = "portfolio-analyzer"
version = "0.1.0"
description = "LangGraph-based stock portfolio analysis framework for Indian markets"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-google-genai>=1.0",
    "langchain-core>=0.3",
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.2.0",
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "scipy>=1.11",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "streamlit>=1.38",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
